--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.nfa</groupId>
   <artifactId>skis</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>skis Maven Webapp</name>
+  <packaging>jar</packaging>
+  <version>0.1</version>
+  <name>skis</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
@@ -22,11 +22,10 @@
           <version>4.5.2</version>
       </dependency>
 
-
       <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk16</artifactId>
-      <version>1.46</version>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk16</artifactId>
+        <version>1.46</version>
     </dependency>
 
       <dependency>
