--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
           <version>20090211</version>
       </dependency>
 
+      <dependency>
+          <groupId>com.google.cloud</groupId>
+          <artifactId>google-cloud-datastore</artifactId>
+          <version>0.7.0</version>
+      </dependency>
+
 
   </dependencies>
 
