--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
-          <version>1.4.1.RELEASE</version>
+          <version>1.4.4.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -57,8 +57,13 @@
           <groupId>com.google.cloud</groupId>
           <artifactId>google-cloud-datastore</artifactId>
           <version>0.7.0</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>javax.servlet</groupId>
+                  <artifactId>servlet-api</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
-
 
   </dependencies>
 
