--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
       <dependency>
           <groupId>org.xerial</groupId>
           <artifactId>sqlite-jdbc</artifactId>
-          <version>3.7.2</version>
+          <version>3.16.1</version>
       </dependency>
+
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
@@ -46,6 +47,12 @@
           <version>1.4.1.RELEASE</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-dbcp2</artifactId>
+          <version>2.1.1</version>
+      </dependency>
 
       <dependency>
           <groupId>org.json</groupId>
